--- a/index.html
+++ b/index.html
@@ -18,14 +18,55 @@
         <li>Pages</li>
       </ul>
     </nav>
-    <section class="container section">
+    <section class="container section-primary">
       <div class="section__title__container">
-        <p class="section__title">Creativity and Design</p>
-        <div class="line--primary"></div>
+        <p class="section__title--secondary">Creativity and Design</p>
+        <div class="line--secondary"></div>
       </div>
       <h1 class="section__text">
         We’re a design studio that believe in the ideas.
       </h1>
+    </section>
+    <section class="photo__gallery">
+      <img src="/image/image2.jpg" alt="" />
+      <img class="long__image" src="/image/image2-1.jpg" alt="" />
+      <img src="/image/image3.jpg" alt="" />
+      <img src="/image/image4.jpg" alt="" />
+      <img src="/image/image3.jpg" alt="" />
+      <img src="/image/image4.jpg" alt="" />
+      <img src="/image/image2.jpg" alt="" />
+      <img src="/image/image4.jpg" alt="" />
+      <img src="/image/image3.jpg" alt="" />
+      <img src="/image/image4.jpg" alt="" />
+      <img src="/image/image2.jpg" alt="" />
+    </section>
+    <section class="container section-primary">
+      <div class="section__title__container">
+        <p class="section__title--primary">Creativity and Design</p>
+        <div class="line--tertiary"></div>
+      </div>
+      <h1 class="section__text">
+        We are creative perfectionists and this lets us go beyond existing
+        framework in developing strategies, as well as in creativity & design.
+      </h1>
+    </section>
+    <section class="section-secondary">
+      <div class="container">
+        <div class="section__title__container">
+          <p class="section__title--tertiary">Creativity and Design</p>
+          <div class="line--tertiary"></div>
+        </div>
+        <h1 class="section__text--tertiary">
+          We are creative perfectionists and this lets us go beyond existing
+          framework in developing strategies, as well as in creativity & design.
+        </h1>
+        <div class="logo-container">
+          <img src="./image/logo-9.png" alt="" />
+          <img src="./image/logo-10.png" alt="" />
+          <img src="./image/logo-11.png" alt="" />
+          <img src="./image/logo-12.png" alt="" />
+        </div>
+      </div>
     </section>
   </body>
 </html>
