--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/4567185393.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Candidus</title>
   </head>
   <body>
@@ -68,5 +72,25 @@
         </div>
       </div>
     </section>
+    <section class="container section-primary">
+      <div class="section__title__container">
+        <p class="section__title--primary">Dhaka Based Creative Studio</p>
+        <div class="line--tertiary"></div>
+      </div>
+      <h1 class="section__text">Level-4, 34, Awal Centre, Banani, Dhaka</h1>
+    </section>
+    <hr />
+    <footer>
+      <div class="footer-section container">
+        <p>&copy; 2023 All rights reserved by Imran Hasan</p>
+        <div class="social-icons">
+          <div class="social-icon">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
