--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
       </h1>
     </section>
     <section class="photo__gallery">
-      <img src="/image/image2.jpg" alt="" />
-      <img class="long__image" src="/image/image2-1.jpg" alt="" />
-      <img src="/image/image3.jpg" alt="" />
-      <img src="/image/image4.jpg" alt="" />
-      <img src="/image/image3.jpg" alt="" />
-      <img src="/image/image4.jpg" alt="" />
-      <img src="/image/image2.jpg" alt="" />
-      <img src="/image/image4.jpg" alt="" />
-      <img src="/image/image3.jpg" alt="" />
-      <img src="/image/image4.jpg" alt="" />
-      <img src="/image/image2.jpg" alt="" />
+      <img src="./image/image2.jpg" alt="" />
+      <img class="long__image" src="./image/image2-1.jpg" alt="" />
+      <img src="./image/image3.jpg" alt="" />
+      <img src="./image/image4.jpg" alt="" />
+      <img src="./image/image3.jpg" alt="" />
+      <img src="./image/image4.jpg" alt="" />
+      <img src="./image/image2.jpg" alt="" />
+      <img src="./image/image4.jpg" alt="" />
+      <img src="./image/image3.jpg" alt="" />
+      <img src="./image/image4.jpg" alt="" />
+      <img src="./image/image2.jpg" alt="" />
     </section>
     <section class="container section-primary">
       <div class="section__title__container">
